--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
         </p>
         <p class="wow fadeInUp section2-title section2-sub inner cover cover-container d-flex w-100 h-100 p-2 mx-auto flex-column">
             안녕하세요.<br/>
+            신랑 동민입니다.<br/>
+            <br/>
             <br/>
             고맙고 소중한 분들을 모시고<br/>
             직접 혼인의 예를 갖추어야 하는 것이 도리이나<br/>
@@ -342,7 +344,7 @@
                 <p class="section6-location-sub" style="text-align: center;">
                     大分県大分市庄の原２−３<br/><br/>
                     <img src="https://dmin-eri.github.io/img/saintclair.jpg" width="358" style="border:0;">
-                    <br/>
+                    <br/><br/>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6835379.654913976!2d122.35061645507805!3d33.224903086263964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3546a18bcac95d65%3A0x28c599799d6bf6c2!2z44K744Oz44OI44Kv44Os44Ki44OS44Or44K6!5e0!3m2!1sja!2sjp!4v1709542614167!5m2!1sja!2sjp" width="358" height="358" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     
                 </p>
