--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
             안녕하세요.<br/>
             신랑 동민입니다.<br/>
             <br/>
+            일본 유학중에 시작된 작은 인연이</br>
+            결실을 맺게 되어</br>
+            혼인의 예를 찾추려고 합니다</br>
             <br/>
             고맙고 소중한 분들을 모시고<br/>
             직접 혼인의 예를 갖추어야 하는 것이 도리이나<br/>
