--- a/index.html
+++ b/index.html
@@ -137,18 +137,18 @@
             안녕하세요.<br/>
             신랑 동민입니다.<br/>
             <br/>
-            일본 유학중에 시작된 작은 인연이</br>
-            결실을 맺게 되어</br>
-            혼인의 예를 찾추려고 합니다</br>
+            일본 유학 중에 시작된 소중한 인연이</br>
+            약 10년이란 시간 끝에</br>
+            결실을 맺게 되었습니다.</br>
             <br/>
-            고맙고 소중한 분들을 모시고<br/>
-            직접 혼인의 예를 갖추어야 하는 것이 도리이나<br/>
-            양가 부모님의 허락아래<br/>
-            고국 대한민국이 아닌 일본에서<br/>
+            본디 고맙고 소중한 분들을 모시고<br/>
+            직접 혼인의 예를 갖추어야 하는 것이 도리이나,<br/>
+            멀리 이국의 땅에서 혼식을 올리게 되어<br/>
+            양가 부모님과 형제들만 초대하여<br/>
             소박한 예식으로 진행하기로 뜻을 모았습니다.<br/>
             <br/>
             많은 고민을 했지만 이러한 결정으로 인해<br/>
-            친척과 지인 여러분들께<br/>
+            친척과 지인 여러분들을<br/>
             함께 모시지 못하는 큰 실례를 드린 점에 대해<br/>
             진심으로 사과드립니다.<br/>
             <br/>
@@ -346,9 +346,9 @@
                 <p class="section6-location-main" style="margin-bottom: 0;">Saint Clair Hills ~天空の森~</p>
                 <p class="section6-location-sub" style="text-align: center;">
                     大分県大分市庄の原２−３<br/><br/>
-                    <img src="https://dmin-eri.github.io/img/saintclair.jpg" width="500" style="border:0;">
+                    <img src="https://dmin-eri.github.io/img/saintclair.jpg" width="358" style="border:0;">
                     <br/><br/>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6835379.654913976!2d122.35061645507805!3d33.224903086263964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3546a18bcac95d65%3A0x28c599799d6bf6c2!2z44K744Oz44OI44Kv44Os44Ki44OS44Or44K6!5e0!3m2!1sja!2sjp!4v1709542614167!5m2!1sja!2sjp" width="500" height="358" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6835379.654913976!2d122.35061645507805!3d33.224903086263964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3546a18bcac95d65%3A0x28c599799d6bf6c2!2z44K744Oz44OI44Kv44Os44Ki44OS44Or44K6!5e0!3m2!1sja!2sjp!4v1709542614167!5m2!1sja!2sjp" width="3580" height="358" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     
                 </p>
             </div>
