--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <br/>
             본디 고맙고 소중한 분들을 모시고<br/>
             직접 혼인의 예를 갖추어야 하는 것이 도리이나,<br/>
-            멀리 이국의 땅에서 혼식을 올리게 되어<br/>
+            멀리 이국의 땅에서 예식을 올리게 되어<br/>
             양가 부모님과 형제들만 초대하여<br/>
             소박한 예식으로 진행하기로 뜻을 모았습니다.<br/>
             <br/>
@@ -348,13 +348,13 @@
                     大分県大分市庄の原２−３<br/><br/>
                     <img src="https://dmin-eri.github.io/img/saintclair.jpg" width="358" style="border:0;">
                     <br/><br/>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6835379.654913976!2d122.35061645507805!3d33.224903086263964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3546a18bcac95d65%3A0x28c599799d6bf6c2!2z44K744Oz44OI44Kv44Os44Ki44OS44Or44K6!5e0!3m2!1sja!2sjp!4v1709542614167!5m2!1sja!2sjp" width="3580" height="358" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6835379.654913976!2d122.35061645507805!3d33.224903086263964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3546a18bcac95d65%3A0x28c599799d6bf6c2!2z44K744Oz44OI44Kv44Os44Ki44OS44Or44K6!5e0!3m2!1sja!2sjp!4v1709542614167!5m2!1sja!2sjp" width="358" height="358" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     
                 </p>
             </div>
             <br/>
         <footer class="pt-5 text-muted text-center text-small section8">
-            <p class="mb-1">© 2024-03-03 Dongmin, Eri</p>
+            <p class="mb-1">© 2024-03-05 Dongmin, Eri</p>
             <br/><br/>
             <br/><br/>
         </footer>
