--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:image:height" content="800" />
     <meta property="og:description" content="서로 다른 색깔의 물감이 섞여, 아름다운 하나의 그림을 만들어 가고자 합니다." />
     <meta name="format-detection" content="telephone=no" />
+    <link rel="icon" href="https://dmin-eri.github.io/img/icon.png">
     <title>동민, 에리 결혼합니다</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
